Add date creation for end user
